<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MauPin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Pins</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="prompt_user_name">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign"><b>Sign in</b></string>
    <string name="action_register"><b>Register</b></string>
    <string name="action_register_user"><b>Add User</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="register_progress">Register &#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_register_success">Register success!</string>
    <string name="user_login_success">Login success!</string>
    <string name="pin">Pin:</string>
    <string name="btn_pin">Pin!</string>
    <string name="error_ingresa_tu_pin">Put your Pin!</string>
    
    <string name="follow_question">Want to follow?</string>
    <string name="follow_msg">Click to Yes, to follow it.</string>
    
    <string name="si">Yes</string>
    <string name="cancel">Cancel</string>
    
    <string name="no_data">Without data</string>
    <string name="add_pin">Add Pin</string>

    <!-- Errors -->
    <!-- 000009 -->
    <string name="email_not_exists">Email not exists!</string>
    <!-- 000006 -->
    <string name="email_format_error">Email format error!</string>
    <!-- 000007 -->
    <string name="error_email_already_exist">The Email already exist!</string>
    <!-- 000008 -->
    <string name="error_wrong_login">Wrong login</string>
    <!-- 000011 -->
    <string name="error_token_not_exists">Wrong login</string>
    <!-- 000014 -->
    <string name="error_follow_exists">Follow exists!</string>
    <string name="title_activity_make_pin">MakePinActivity</string>

</resources>